# turkcell-code-night

./: .dockerignore  .gitignore  CLAUDE.md  DENETIM.md  README.md  docker-compose.yml  index.html  pyproject.toml  server.py  start.bat
.github/workflows/: ci.yml
ai/: tool_registry.py
api/: auth_utils.py  main.py  mcp_server.py  notifications_store.py
api/routers/: achievements.py  ai_explain.py  ai_stream.py  auth.py  badges.py  challenges.py  content.py  events.py  ingestion.py  leaderboard.py  notifications.py  party.py  (+7 more)
database/: setup.py
deploy/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: agent_guide.md  ai_layer.md  architecture.md  backlog.md  data_contracts.md  data_flow.md  deterministic_rules.md  operations.md  product_plan.md  rule_engine.md  sprint_10_json_export.md  sprint_11_pipeline_and_cli.md  sprint_12_ai_explanation_layer_no_llm.md  sprint_13_cli_explain.md  sprint_14_optional_llm_layer.md  sprint_1_setup.md  sprint_20.md  sprint_21.md  sprint_22.md  sprint_23.md  sprint_24.md  sprint_25.md  sprint_26.md  sprint_27.md  sprint_28.md  sprint_29.md  sprint_30.md  sprint_3_ingestion.md  sprint_4_state_engine.md  sprint_5_rule_engine.md  sprint_6_points_ledger.md  sprint_7_badge_engine.md  sprint_8_leaderboard.md  sprint_9_notifications.md  testing_and_determinism.md  v2_plan.md
engine/: achievement_engine.py  admin_insights_engine.py  ai_challenge_engine.py  ai_leaderboard.py  badge_engine.py  challenge_designer_engine.py  challenge_tips_engine.py  chat_engine.py  condition_parser.py  content_ai_engine.py  csv_ingestion.py  daily_plan_engine.py  digest_engine.py  embedding_service.py  event_bus.py  explanation_engine.py  feedback_loop.py  goal_engine.py  leaderboard_engine.py  learning_pipeline.py  ledger.py  level_engine.py  llm_adapter.py  memory_store.py  model_router.py  motivation_engine.py  nl_search_engine.py  personalization_engine.py  pipeline.py  prompt_manager.py  recommendation_engine.py  rivalry_engine.py  season_engine.py  sentiment_engine.py  state_builder.py  vector_store.py  weekly_report_engine.py
frontend/: admin.html  catalog.html  content.html  index.html  leaderboard.html  manifest.json  package-lock.json  package.json  panel.html  profile.html  social.html  sw.js  tsconfig.json  vite.config.ts  watch.html
tests/: live_audit.py
turkcell-code-night-main/: chat.py  main.py
(+207 files in other folders)
