[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gamification-engine"
version = "0.1.0"
description = "Deterministic gamification engine for digital video platforms."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Gamification Engine Team" }
]
dependencies = []

[project.optional-dependencies]
backend = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0.30",
  "pydantic-settings>=2.4",
]
dev = [
  "gamification-engine[backend]",
  "httpx>=0.27",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
gamification-engine = "gamification_engine.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=gamification_engine",
  "--cov=gamification_backend",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]

[tool.coverage.run]
source = ["gamification_engine", "gamification_backend"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise SystemExit",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "S",
]
ignore = [
  "S101",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["gamification_engine", "gamification_backend"]

