[project]
name = "gamification-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "PyJWT>=2.8.0",
  "openai>=1.30.0",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["database*", "engine*", "api*"]
