[project]
name = "gamification-engine"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "PyJWT>=2.8.0",
  "openai>=1.30.0",
  "anthropic>=0.28.0",
  "chromadb>=0.5.0",
  "python-dotenv>=1.0.0",
  "sse-starlette>=1.8.0",
]
